# overloadable

./: README.md  setup.cfg
examples/: argument_inheritance.py  handler_inheritance.py  inheritance.py  simple_example.py  user_defined_types.py
src/this_is_stupid/: __init__.py  _overloadable.py
