[metadata]
name = this_is_stupid
version = 1.0
author = Alex Brisan
description = Musings on various python quirks and tricks.
long_description = file: README.md, LICENSE.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
python_requires = >=3.12

[options.packages.find]
where=src
